--- a/index.html
+++ b/index.html
@@ -291,6 +291,21 @@
         <p>Dios te salve Reina y Madre, Madre de Misericordia, vida, dulzura y esperanza nuestra. Dios te salve, a Ti clamamos los deterrados hijos de Eva, a Ti suspiramos, gimiendo y llorando en este Valle de lagrimas. E a pues Señora abogada nuestra, vuelve a nosotros, esos tus ojos misericordiosos y después de este destierro, muestranos a Jesus, el fruto de tu vientre, Oh clemente, Oh piadosa, Oh dulce siempre Virgen Maria. Ruega por nosotros Santa Madre de Dios para que seamos dignos de alcanzar las promesas y gracias de nuestro Señor Jesucristo, Amen.</p>
     </div>
 
+    <div class = "prayer">
+        <h2>Evangelio del Siguiente Domingo y Lectio Divina</h2>
+        <p>[Paste content for Evangelio del Siguiente Domingo y Lectio Divina here]</p>
+    </div>
+
+    <div class = "prayer">
+        <h2>Oracion para cerrar la Lectio Divina</h2>
+        <p>[Paste content for Oracion para cerrar la Lectio Divina here]</p>
+    </div>
+
+     <div class = "prayer">
+        <h2>Peticiones y Acciones de Gracias al Señor</h2>
+        <p>[Paste content for Peticiones y Acciones de Gracias al Señor here]</p>
+    </div>
+
     <div class="prayer">
         <h2>Oracion</h2>
         <p>Acoge Padre todas estas oraciones que te dirigimos en nuestras necesidades, escucha tambien aquellas que se quedan en nuestros corazon y no nos atrevemos a decir. Escucha tambien nuestros agradecimientos por todo lo que nos ofreces, aun sin pedirlo.</p>
@@ -319,21 +334,6 @@
     <div class="prayer">
         <h2>Santa Teresa de Calcuta</h2>
         <p>Ruega por nosotros</p>
-    </div>
-
-    <div class = "prayer">
-        <h2>Evangelio del Siguiente Domingo y Lectio Divina</h2>
-        <p>[Paste content for Evangelio del Siguiente Domingo y Lectio Divina here]</p>
-    </div>
-
-    <div class = "prayer">
-        <h2>Oracion para cerrar la Lectio Divina</h2>
-        <p>[Paste content for Oracion para cerrar la Lectio Divina here]</p>
-    </div>
-
-     <div class = "prayer">
-        <h2>Peticiones y Acciones de Gracias al Señor</h2>
-        <p>[Paste content for Peticiones y Acciones de Gracias al Señor here]</p>
     </div>
 
     <div class="prayer">
@@ -480,4 +480,70 @@
                 <span class="birthday-date">25 Agosto</span>
             </div>
             <div class="date-item">
-                <span class="birthday-name">CARMENZA FAJARDO
+                <span class="birthday-name">CARMENZA FAJARDO</span>
+                <span class="birthday-date">28 Agosto</span>
+            </div>
+        </div>
+
+        <!-- Septiembre -->
+        <div class="month-card">
+            <h3>Septiembre</h3>
+             <div class="date-item">
+                <span class="birthday-name">GERMAN OCAMPO</span>
+                <span class="birthday-date">19 Septiembre</span>
+            </div>
+            <div class="date-item">
+                <span class="birthday-name">MAURICIO QUINTERO</span>
+                <span class="birthday-date">20 Septiembre</span>
+            </div>
+            <div class="date-item">
+                <span class="birthday-name">MIRIAM COBO</span>
+                <span class="birthday-date">28 Septiembre</span>
+            </div>
+        </div>
+
+        <!-- Noviembre -->
+        <div class="month-card">
+            <h3>Noviembre</h3>
+            <div class="date-item catholic-date">
+                <span class="event-name">Día de Todos los Santos</span>
+                <span class="event-date">1 Noviembre</span>
+            </div>
+             <div class="date-item">
+                <span class="birthday-name">JOE MARTINEZ</span>
+                <span class="birthday-date">19 Noviembre</span>
+            </div>
+            <div class="date-item catholic-date">
+                <span class="event-name">Primer Domingo de Adviento</span>
+                <span class="event-date">30 Noviembre</span>
+            </div>
+        </div>
+
+        <!-- Diciembre -->
+        <div class="month-card">
+            <h3>Diciembre</h3>
+            <div class="date-item">
+                <span class="birthday-name">ROCIO OCAMPO</span>
+                <span class="birthday-date">3 Diciembre</span>
+            </div>
+            <div class="date-item catholic-date">
+                <span class="event-name">Inmaculada Concepción</span>
+                <span class="event-date">8 Diciembre</span>
+            </div>
+           <div class="date-item">
+                <span class="birthday-name">PILAR JARAMILLO</span>
+                <span class="birthday-date">8 Diciembre</span>
+            </div>
+            <div class="date-item catholic-date">
+                <span class="event-name">Navidad</span>
+                <span class="event-date">25 Diciembre</span>
+            </div>
+        </div>
+    </div>
+
+  <div class="footer">
+        <p class="credit">Design and Development: Carmenza Fajardo / Mario Arbelaez</p>
+        <p class="copyright">© 2025 All rights reserved</p>
+    </div>
+</body>
+</html>
